src/objects/Trigger_Handler__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>