src/objects/Trigger_Handler__mdt/fields/Trigger_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Pipeline__c</fullName>
    <label>Trigger Pipeline</label>
    <referenceTo>Trigger_Pipeline__mdt</referenceTo>
    <relationshipLabel>Trigger Handlers</relationshipLabel>
    <relationshipName>Trigger_Handlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>