src/objects/Trigger_Handler__mdt/fields/Use_After_Insert__c.field-meta.xml
<CustomField>
    <fullName>Use_After_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use After Insert</label>
    <type>Checkbox</type>
</CustomField>