src/objects/Trigger_Handler__mdt/fields/Use_After_Undelete__c.field-meta.xml
<CustomField>
    <fullName>Use_After_Undelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use After Undelete</label>
    <type>Checkbox</type>
</CustomField>