src/objects/Trigger_Handler__mdt/fields/Use_Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Use_Before_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Before Update</label>
    <type>Checkbox</type>
</CustomField>